# webdev_in_rust

./: README.md
backend/: Cargo.toml  build.rs
backend/src/: crypto.rs  database.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs  main.css  main.rs
frontend/src/components/atoms/: custom_button.rs  custom_form_button.rs  mod.rs  pass_input.rs  range_input.rs  text_input.rs
frontend/src/components/molecules/: login_form.rs  mod.rs  new_review_form.rs  register_form.rs
frontend/src/components/organisms/: content_menu.rs  mini_profile.rs  mod.rs  reglog.rs
