[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
data-encoding = "2.4.0"
ring = "0.16.20"
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "tls"] }
serde = { version = "1.0.177", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
pwned = { git = "https://github.com/wisespace-io/pwned-rs.git" }
chrono = "0.4.26"
