[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
gloo = "0.8.1"
serde = "1.0.174"
serde_json = "1.0.103"
stylist = { version = "0.12.1", features = ["yew", "parser", "yew_use_media_query"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
zxcvbn = "2.2.2"

